GCP/gcp-scrape-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrape-service
  labels:
    app: scrape-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrape-service
  template:
    metadata:
      labels:
        app: scrape-service
    spec:
      containers:
        - name: scrape-service
          image: gouranga1234/scrapeservice:1.1.12
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.2"
              memory: "128Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: scrape-service
spec:
  selector:
    app: scrape-service
  ports:
    - port: 8090
      targetPort: 8090
