GCP/gcp-cloud-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: gouranga1234/apigateway:1.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.2"
              memory: "128Mi"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8084

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 8084
      protocol: TCP
